# pm-endgame-sweep

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  PROGRESS.md  README.md  SPEC.md  deny.toml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.github/: CI_CD.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yml  rust-ci.yml  security-scan.yml  test-web.yml  web-ci.yml
.sqlx/: query-05280313d6e4d2f5967ef491ba0ea252e4254dc01ca51d40550b97f78bb7048b.json  query-1f2f54b210d1c1edcae56659f6fe0bf38787c5b53c413a7704212f820bac056d.json  query-3af5d5ce47ce25505945b37be568348fe753fe06214e50971ef17319d62024db.json  query-41a2106bb2c452ada7006357d3654aa7a80e44fdc7f6ba26b0e951bc952944e9.json  query-694b95c3ccd7a3f63477b9846723da2ee8f273e7890769c4b0fa45d72572e3e4.json  query-7677f659617c0288528422651fa3da7e0c02f4b117a12dc7d57666635040805e.json  query-791f22e4517d2cddeb7db567702ab66f04e2faf52661439921976ab54b7a96f6.json  query-b4baa8a278040370c6dbd4630452555b9dc9364c70de2629d8f4406055d6e46e.json  query-c9f75b0fbce7f1df194a1cd9b29610eab1edcb75a093b9b6926240ba58ca2bc9.json  query-cc50b46c47d0c77f86b53772515749f2187405c34f94da98694607d409a0a704.json  query-dc2b0817081f103e79976d0a4ac062d92f11c97ec448939113793497663b45f5.json  query-def5592b3ae7edafdb7542586bee5e4888b8967651db92754a6c85d474f8ce96.json  query-e2555640934e9e32990208180f7ab0747b8bc63de16b6b5f1146513fb209c21f.json  query-eb22a62e907006b3bc2accc42e010e34029ea05756bba2c06504e6bfb311154d.json  query-f570dfca979e105d66e0ff75b91a3c77ad4b6928251d32b7cb0b83e513918384.json
config/: default.yaml  env.example
crates/api/: Cargo.toml
crates/api/src/: config.rs  lib.rs  main.rs  metrics.rs  server.rs  state.rs
crates/api/src/handlers/: health.rs  market.rs  metrics.rs  mod.rs  opportunities.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  market.rs  quote.rs  risk.rs  score.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: client.rs  config.rs  lib.rs  main.rs  orchestrator.rs  retry.rs
crates/scoring/: Cargo.toml
crates/scoring/src/: config.rs  engine.rs  lib.rs  main.rs  orchestrator.rs
crates/storage/: Cargo.toml  README.md
crates/storage/.sqlx/: query-175eada6664c4c9730d1b589aea193d14271e806a465f5f75ff5ce27337c3f2f.json  query-20a01399a60403720700611ec9d30e99460ed45a9d8b7334eb2eca6d2f0dffab.json  query-3045dec8b092159faa673c4b8a1aa7a9761601913a783e9ec6695eeb527e8d1e.json  query-5864e19bf8f907f8f7e649f3555b530d76986f86277b6849f1470f1a0f329d36.json  query-5ad755b94251518ec26001375d5485dd2c3df4dc327c0ea819d40bb9e8404b51.json  query-81525cfa51b0d55b3009cdbea271276551532528149a8ab931e6ad47d18cb3ae.json  query-85a9ce836e3fec83595e68f8da9d756319294b6d0d0a1e8c9a0005fdc1fa68be.json  query-8e7dce02eb744bd6aeb056b893cf96e419d8ccf69830f249279de3bb1fde10f3.json  query-ab89944f0b96a1e7225e8574393e64785f70f7cdf05d9a869d4ab777acf1a235.json  query-c3978fabd70c020ce1c538b34ff510f1b1a69d5f1cc819d435e488257cb69bfb.json  query-cfbbd9a21a11bb81eb92293193d7ff1ea58843259c29a63670ddad868f436d9c.json  query-d20223508b74635a8e537bf7e1102f3abf03a60b93f486ad0e06b8d45775accb.json  query-e04b7d233b287f38b93d04605f4a573d729824882e23a4af36ef112d77571ff5.json
crates/storage/src/: lib.rs  markets.rs  quotes.rs  recs.rs  rules.rs  scores.rs
docs/: IMPLEMENTATION_PLAN.md  PROGRESS.md  SPEC.md
migrations/: 20260101000001_initial_schema.sql
web/: .gitignore  CLAUDE.md  README.md  TESTING.md  TESTING_SUMMARY.md  eslint.config.mjs  package.json  playwright.config.ts  vitest.config.ts
web/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
web/app/market/[id]/: error.tsx  loading.tsx  page.tsx
web/components/features/: market-card.tsx  opportunities-table.tsx
web/components/ui/: badge.test.tsx
web/e2e/: market-details.spec.ts  opportunities.spec.ts
web/lib/: api.test.ts  api.ts  utils.test.ts  utils.ts
web/tests/: setup.ts
web/types/: api.ts
