[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/storage",
    "crates/ingest",
    "crates/scoring",
    "crates/api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["PM Endgame Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate", "chrono", "bigdecimal"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

# Tracing and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
sha2 = "0.10"

# Config
config = "0.14"

# Testing
proptest = "1.4"
