[package]
name = "pm-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pm-api"
path = "src/main.rs"

[dependencies]
pm-domain = { path = "../domain" }
pm-storage = { path = "../storage" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true
