[package]
name = "pm-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pm-ingest"
path = "src/main.rs"

[dependencies]
pm-domain = { path = "../domain" }
pm-storage = { path = "../storage" }
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true
